--- a/templates/index.html
+++ b/templates/index.html
@@ -7,7 +7,7 @@
 </head>
 <body>
     <div class="container">
-        <h1>Office Employee management</h1>
+        <h1>OEM</h1>
         <hr>
         <a class="btn btn-primary" href="/all_emp" role="button">View All Employee</a><br>
         <a class="btn btn-primary" href="/add_emp" role="button">Add An Employee</a><br>
